# ai-employee-vault

./: .env.cloud.example  .env.example  .gitignore  CLAUDE.md  Company_Handbook.md  README.md  docker-compose.odoo.yml  pm2.cloud.config.js  pm2.config.js  pyproject.toml
.claude/: settings.json
.claude/hooks/: stop.py
.claude/skills/: approval-handler.md  ceo-briefing.md  email-triage.md  invoice-generator.md  vault-monitor.md
.obsidian/: graph.json  workspace.json
.specify/memory/: constitution.md
Logs/: 2026-02-23.json  2026-02-24.json
Needs_Action/: AUTH_ERROR_WhatsAppWatcher_1771923227.md  FILE_Invoice_FINAL_1771860902.md
State/: FilesystemWatcher.json
scripts/: _wa_test.py  _wa_watcher_test.py  setup_cloud_agent.sh  setup_facebook_session.py  setup_gmail_auth.py  setup_instagram_session.py  setup_odoo_cloud.sh  setup_vault.py  setup_whatsapp_session.py  sync_vault.sh  test_platinum_gate.py
specs/001-digital-fte-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: dry_run.py  exceptions.py  retry_handler.py  state_manager.py  vault_utils.py
src/audit/: audit_logger.py  audit_logic.py  ceo_briefing.py
src/orchestrator/: approval_handler.py  cloud_constraints.py  main.py  orchestrator.py  watchdog.py
src/skills/: facebook_poster.py  instagram_poster.py  linkedin_poster.py  twitter_poster.py
src/watchers/: base_watcher.py  (+6 more)
tests/: test_bronze_acceptance.py  test_foundation.py  test_gold_acceptance.py  test_silver_acceptance.py
vault_template/: .gitignore  Business_Goals.md  Company_Handbook.md  Dashboard.md
(+29 files in other folders)
